@@ -1,3 +1,3 @@
 name = hovercraft_ad
 author = stu
-optional_depends = default, wool, mesecons_pistons
+optional_depends = default, wool, basic_materials
